@@ -1,3 +1,10 @@
+2004-06-23  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* unix/tclUnixInit.c (GetStackSize, TclpCheckStackSpace): 
+	* unix/tclUnixThrd.c (TclpThreadGetStackSize): Added code to check
+	whether the C stack is about to be exceeded, from [Patch 746378]
+	by Joe Mistachkin but with substantial revisions.
+
 2004-06-22  Kevin Kenny  <kennykb@acm.org>
 
 	* generic/tclEvent.c (NewThreadProc): Fixed broken build on
